--- a/plots/ss_sensitivity_metrics_table_v3.tex
+++ b/plots/ss_sensitivity_metrics_table_v3.tex
@@ -1,9 +1,9 @@
 % latex table generated in R 4.1.0 by xtable 1.8-4 package
-% Fri Mar 04 16:10:05 2022
+% Sat Mar 05 12:09:19 2022
 \begin{table}[H]
 \centering
 \caption{Average metrics (standard errors are in subscripts) for the simulation sensitivity
-study applied to scenario 7.\\} 
+study applied to Scenario 7.\\} 
 \label{tab:sim_sensitivity_results}
 \begin{tabular}{lllllllllll}
   \hline
